--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="table">
         <h1>Tracker de Gastos</h1>
         <p>
-          Bem vindo, Caio! <br />
+          Bem vindo, Junior! <br />
           Seu saldo total é de : <span class="saldo-dinamico"> </span>
         </p>
       </div>
